--- a/Project/Login.html
+++ b/Project/Login.html
@@ -154,7 +154,7 @@
 
 				<div class="row my-3">
 					<div class="col-xl-10 col-lg-10 col-md-10 col-sm-10 offset-xl-1 offset-lg-1 offset-md-1 offset-1 offset-md-1">
-					<a href="https://www.google.com" style="color: black">Forget Password?</a>
+					<a href="https://www.google.com" style="color: black">Forgot Password?</a>
 					</div>
 				</div>
 
