BODY classes added

--- a/Project/Homepage.html
+++ b/Project/Homepage.html
@@ -55,6 +55,7 @@
         <a href="#"><i class="fas fa-user-plus"></i><span class="d-sm-none d-md-inline d-none"> Signup</span></a>
         <a href="Login.html"><i class="fa fa-fw fa-user"></i><span class="d-sm-none d-md-inline d-none"> Login</span></a>
     </div>
+    <div></div>
 </form>
 
 <div class="container col-12 col-xl-12 col-lg-12 col-md-12 col-sm-12">
