Background and logo properties finalizes

--- a/Project/Homepage.html
+++ b/Project/Homepage.html
@@ -13,7 +13,7 @@
         {
             background-image: url(https://c.wallhere.com/photos/fe/8a/3008x2000_px_coffee_cup_freelance_laptop_minimalism_Mugs_Wooden_Surface-1335727.jpg!d);
             background-repeat:no-repeat;
-            background-size:auto;
+            background-size:100% 200%;
         }
         #mainLogo
         {
@@ -49,7 +49,7 @@
 <body id="bgHomepageProperty">
 <form>
     <div class="topnav">
-        <a href="#" class="navbar-left" style="float: left;"><img src="Images/lg1.png"></a>
+        <a href="#" class="navbar-left" style="float: left;"><img src="Images/Rackup-Logo(100X35).png"></a>
         <a href="#"><i class="fas fa-book-reader"></i><span class="d-sm-none d-md-inline d-none"> About Us </span></a>
         <a href="#"><i class="fas fa-phone"></i><span class="d-sm-none d-md-inline d-none"> Contact Us</span></a>
         <a href="#"><i class="fas fa-user-plus"></i><span class="d-sm-none d-md-inline d-none"> Signup</span></a>
