--- a/Project/Login.html
+++ b/Project/Login.html
@@ -77,7 +77,7 @@
 		{
 			background-image: url(https://png2.kisspng.com/20180326/liw/kisspng-gradient-desktop-wallpaper-color-background-5ab88c172773b8.5174360515220439271616.png);
 			background-repeat: no-repeat;
-			background-size:auto;
+			background-size:100% 150%;
 		}
 		.topnav {
 			background:white;
@@ -109,12 +109,13 @@
 <body class="bgLoginProperty">
 	<form>
 		<div class="topnav">
-			<a href="#" class="navbar-left" style="float: left;"><img src="Images/lg1.png"></a>
+			<a href="#" class="navbar-left" style="float: left;"><img src="Images/Rackup-Logo(100X35).png"></a>
 			<a href="L"><i class="fas fa-book-reader"></i><span class="d-sm-none d-md-inline d-none"> About Us</span></a>
 			<a href="#"><i class="fas fa-phone"></i><span class="d-sm-none d-md-inline d-none"> Contact Us</span></a>
 			<a href="Homepage.html"><i class="fas fa-home"></i><span class="d-sm-none d-md-inline d-none"> Home</span></a>
 		</div>
 	</form>
+
 </div>
 
 	<div class="container col-xl-4 col-lg-6 col-md-8 col-sm-10">
@@ -131,7 +132,7 @@
 						<input type="text" class="InpuTTags" id="Tg-Username" name="User" placeholder="Username" >
 					</div>
 				</div>
-//
+
 				<div class="row my-3">
 					<div class="col-10 col-xl-10 col-lg-10 col-md-10 col-sm-10 offset-xl-1 offset-lg-1 offset-md-1 offset-sm-1 offset-1">
 						<p style="color: black"class="d-none d-sm-block">Password :</p>
