Fixed Background issue by including background file now. It was done using URL before.

--- a/Project/signup.html
+++ b/Project/signup.html
@@ -73,7 +73,7 @@
         }
         body
         {
-            background-image: url("kisspng-gradient-desktop-wallpaper-color-background-5ab88c172773b8.5174360515220439271616.png");
+            background-image: url(https://png2.kisspng.com/20180326/liw/kisspng-gradient-desktop-wallpaper-color-background-5ab88c172773b8.5174360515220439271616.png);
             background-repeat: no-repeat;
             background-size:auto;
         }
