Fixed Background issue by including background file now. It was done using URL before.

--- a/Project/Login.html
+++ b/Project/Login.html
@@ -149,7 +149,7 @@
 				
 				<div class="row my-3">
 					<div class="col-10 col-xl-10 col-lg-10 col-md-10 col-sm-10 offset-xl-1 offset-lg-1 offset-md-1 offset-sm-1 offset-1">
-					<button id="btn-Signup" type="submit"> Sign Up </button>
+					<a href="signup.html"> <button id="btn-Signup" type="submit"> Sign Up </button></a>
 					</div>
 				</div>
 
